--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,11 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
+              {
+                "glob": "**/*",
+                "input": "node_modules/@fortawesome/fontawesome-free/webfonts",
+                "output": "assets/fonts"
+              },
               "src/assets"
             ],
             "styles": [
